# download_conf_file

./: Cargo.toml  flat-json.json  urls.json  urls.yaml
.fleet/: run.json
src/: 01_下载txt中所有链接中的文件.rs  02_[二维JSON]添加url.txt文件中URL到flat-json.json文件中(写法一).rs  03_[二维JSON]添加url.txt文件中的URL到flat-json.json文件中(写法二).rs  04_[二维JSON]从flat-json.json文件的key值中，找出最优的链接下载.rs  1_添加URL到urls.json文件中.rs  2_从JSON文件key值中，找出最优的链接下载.rs  demo01_下载txt中所有链接中的文件.rs  main 1 异步下载.rs  main 2 异步下载，封装成函数.rs  main 3 [JSON]读取JSON文件的数据并转换为HashMap类型.rs  main 4 [YAML]读取YAML文件的数据并转换为HashMap类型.rs  main 5 [JSON]urls.json，下载字段json内所有URL的文件(已去重，功能不全).rs  main 6 [JSON]urls.json，下载所有URL的文件(已去重，功能全1).rs  main 7 [YAML]urls.yaml，下载所有URL的文件(已去重，功能全1).rs  main 8 [JSON]urls.json，下载所有URL的文件(已去重，功能全2).rs  main 9 [YAML]urls.yaml，下载所有URL的文件(已去重，功能全2).rs  使用哪些外部文件，看这里.txt
