[package]
name = "download_conf_file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0", features = ["derive"]}
reqwest = "0.11.20"
serde_json = "1.0.107"
rand = "0.8.5"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]